# voice-edge-benches

./: .gitignore  LICENSE  NOTICE  README.md
benches/kokoro-python/: bench.py  bench_int8.py  pyproject.toml
benches/kokoro-rust/: Cargo.toml
benches/kokoro-rust/src/: main.rs
benches/piper-python/: bench.py  pyproject.toml
benches/piper-rust/: Cargo.toml
benches/piper-rust/src/: main.rs
benches/pocket-cpp/: CMakeLists.txt  LICENSE.upstream  README.md  bench.py  export_onnx.py  pyproject.toml
benches/pocket-cpp/src/: pocket_tts.cpp
benches/supertonic-rust/: Cargo.toml
benches/supertonic-rust/src/: bench.rs  helper.rs
fixtures/: sentences.json  sentences_multi.json
results/: quality_utmos.json  summary_14rows.json
results/kokoro-python/: result.json
results/kokoro-python-int8/: result.json
results/kokoro-rust/: result.json
results/kokoro-rust-int8/: result.json
results/piper-python-en_US-lessac-medium/: result.json
results/piper-python-en_US-ryan-high/: result.json
results/piper-rust/: result.json
results/piper-rust-en_US-lessac-medium/: result.json
results/pocket-cpp/: result_fp32.json  result_int8.json
results/supertonic-rust/: result.json
results/supertonic-rust-step4/: result.json
results/threads-1/: kokoro-python_result.json  piper-python-en_US-lessac-medium_result.json  piper-rust_result.json  pocket-cpp_result_fp32.json  pocket-cpp_result_int8.json  supertonic-rust_result.json
results/threads-4/: kokoro-python_result.json  piper-python-en_US-lessac-medium_result.json  piper-python-en_US-ryan-high_result.json  piper-rust_result.json  pocket-cpp_result_fp32.json  pocket-cpp_result_int8.json  supertonic-rust_result.json
scripts/: download_models.sh  gen_readme.py  quality_utmos.py  run_matrix.sh
