[package]
name = "kokoro-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
kokoros = { path = "../upstream/kokoros" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
