[package]
name = "piper-rust-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
piper-rs = "0.1"
# Pin ort to rc.9 — piper-rs 0.1.9 was written against this RC; rc.10+
# broke API. Disable default features to avoid the `download-binaries`
# path that requires a TLS provider (ureq build-dep API also drifted).
# `copy-dylibs` is enough — it links against system ONNX Runtime instead.
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["ndarray", "half", "copy-dylibs", "download-binaries"] }
# Pin ureq to v2 — ort-sys rc.9 build.rs uses old ureq API (ureq::tls,
# tls_config) that v3 removed.
ureq = "=2.10.1"
ndarray = "=0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
