[package]
name = "supertonic-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "2.0.0-rc.7"
ndarray = { version = "0.17", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
hound = "3.5"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
unicode-normalization = "0.1"
regex = "1.10"
libc = "0.2"

[[bin]]
name = "bench"
path = "src/bench.rs"
